# ProtiCelli

./: .gitignore  README.md  RELA_A-431_generation.csv  antibody_map.pkl  assembly_map_visualization.ipynb  gene_expression_correlation.ipynb  ordinary_sampler_standalone.py  p4ha2_example.csv  pyproject.toml  quickstart.ipynb  requirements.txt  spatial_clustering.ipynb  test.py  train.py
RELA_A-431/: cell_9.tiff
RELA_results/: A-431_RELA_gene_correlations.csv  A-431_correlation_clustered.csv  A-431_correlation_matrix.csv  A-431_correlation_network.gml  A-431_expression.csv  A-431_expression.pkl  A-431_expression_zscore.csv  A-431_expression_zscore.pkl
analysis/: assembly_map_visualization.ipynb  spatial_clustering.ipynb
analysis/embedding_comparison/: analyze_sampling_stability.py  compare_embeddings.py  embedding_utils.py  plot_umap_paper.py  run_comparison.sh  run_plot_umap_paper.sh  run_real_sampling_stability.sh  run_sampling_stability.sh
analysis/pathway_clustering/: run_pathway_disentanglement_organelle.sh  run_pathway_disentanglement_unsupervised.sh
analysis/quality_evaluation/: evaluate_predictions.ipynb
checkpoint-1020000/unet/: config.json
data/: __init__.py  dataset.py
example_cell_reference_input/: cell_0.tiff  cell_1.tiff  cell_10.tiff  cell_11.tiff  cell_12.tiff  cell_13.tiff  cell_14.tiff  cell_2.tiff  cell_3.tiff  cell_4.tiff  cell_5.tiff  cell_6.tiff  cell_7.tiff  cell_8.tiff  cell_9.tiff
models/: BasicTransformerBlock.py  clip_image_encoder.py  dit.py  location_classifier.py  unet.py
proticelli/: __init__.py  _sampling.py  _training.py  model.py
protvl/: __init__.py  _sampling.py  _training.py  model.py
protvs/: __init__.py  _sampling.py  _training.py  model.py
schedulers/: edm_scheduler.py
utils/: checkpoint_utils.py  edm_utils.py  image_utils.py  logging_utils.py
(+47 files in other folders)
